create some components and add styling

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "it's a real sweet app",
   "main": "index.js",
   "scripts": {
-    "start": "budo . -t babelify -d --serve bundle.js --live",
-    "build": "browserify . -t babelify -o bundle.js -g uglifyify",
+    "start": "budo ./js/main.jsx -t babelify -d --serve bundle.js --live",
+    "build": "browserify ./js/main.jsx -t babelify -o bundle.js -g uglifyify",
     "test": "browserify test.js | smokestack | tap-spec",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
     "push": "gh-pages -d dist",
